--- a/style.css
+++ b/style.css
@@ -153,4 +153,22 @@ h1 {
     z-index: 2000;
     padding: 1rem 0 0.5rem 0;
     pointer-events: none;
+}
+
+#powerBarContainer {
+    height: 100px;
+    width: 20px;
+    display: flex;
+    align-items: flex-end;
+    background: #eee;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-right: 0.5rem;
+}
+#powerBar {
+    width: 100%;
+    height: 0;
+    background: #4CAF50;
+    transition: height 0.1s linear;
+    border-radius: 10px 10px 0 0;
 } 
